# bow-game

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
assets/audio/sfx/: ArrowFlyEffect_V2.flac  BowDrawSFX_V2.flac  BowShootSFX_V2.flac  GlassBreakSFX.flac  MenuClickSFX_V2.flac  block_shuffle.flac  level_complete.flac
assets/blender/: quiver.blend
assets/models/: Bow.glb  BowFix.glb  glass_fractured.glb  sph.glb  thumbnail2.glb
src/: camera.rs  credits.rs  cursor.rs  hdr_hack.rs  keybinds.rs  loading.rs  main.rs  rand.rs  settings.rs  splash.rs  title.rs  utils.rs  world.rs
src/camera/: ui.rs  world.rs
src/dev/: cursor.rs  debug.rs  inspector.rs  mod.rs  skip.rs
src/gameplay/: arrow.rs  backdrop.rs  bow.rs  camera.rs  cursor.rs  gameover.rs  loading.rs  mod.rs  mulligan.rs  particles.rs  physics.rs  scorecard.rs  targets.rs  timefreeze.rs  walls.rs
src/gameplay/arrow/: cancel.rs  canceled.rs  fire.rs  flight_time.rs  mod.rs
src/gameplay/audio/: mod.rs
src/gameplay/bow/: animation.rs  mod.rs  primary.rs  pull.rs  timefreeze.rs
src/gameplay/bow/primary/: mod.rs  quiver.rs
src/gameplay/level/: debug.rs  level_maker.rs  mod.rs  new_level.rs  next_level.rs  one.rs  restart.rs  sphere.rs  timer.rs  wall.rs  zero.rs
src/gameplay/level/new_level/: mod.rs  timer.rs
src/gameplay/old_level/: one.rs
src/gameplay/pause/: actions.rs  mod.rs  scorecard.rs
src/gameplay/scorecard/: mod.rs  ui_widgets.rs
src/gameplay/sph/: mod.rs
src/gameplay/sphere/: absorber.rs  arrow_layer.rs  bouncy.rs  despawn.rs  destroy.rs  exploder.rs  gravity.rs  mod.rs  multiplier.rs  normal.rs  timefreeze.rs
src/gameplay/targets/: effects.rs  mod.rs
src/gameplay/timefreeze/: mod.rs
src/gameplay/ui/: footer.rs  header.rs  mod.rs  sandbox.rs
src/screens/: credits.rs  mod.rs
src/settings/: mod.rs  ui.rs
src/theme/: interaction.rs  widgets.rs
src/title/: mod.rs  scene.rs
src/title/scene/: camera.rs  items.rs  mod.rs
src/title/ui/: actions.rs  mod.rs
src/transition/: camera.rs  mod.rs
src/world/: backdrop.rs  light.rs  mod.rs
