[package]
name = "bow-game"
version = "0.1.0"
edition = "2024"

[features]
dev = [
    "avian3d/debug-plugin",
    "avian3d/bevy_diagnostic",
    "avian3d/diagnostic_ui",
    "bevy/async_executor",
    "bevy/bevy_gizmos",
    "bevy/bevy_log",
    "bevy/bevy_ui_debug",
    "bevy/bevy_dev_tools",
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "dep:egui_dock",
    "dep:transform-gizmo-egui",
    "bevy/sysinfo_plugin",
]
dynamic_linking = ["bevy/dynamic_linking"]
web = []
webgpu = ["web", "bevy/webgpu"]
native = [
    "avian3d/simd",
    "avian3d/parallel",
    "bevy/multi_threaded", # not useful for web
]
# See https://github.com/TheBevyFlock/bevy_simple_subsecond_system for info on use
hot = ["dep:bevy_simple_subsecond_system"]

[dependencies]
avian3d = { version = "0.3", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "bevy_scene",
    "default-collider",
    "simd",
    "collider-from-mesh",
] }
bevy = { version = "0.16", default-features = false, features = [
    "animation",
    "bevy_audio",
    "flac",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "hdr",
    "png",
    "std",
    "tonemapping_luts",
    "x11",
    "wayland",
    "webgl2",
] }
bitflags = "2.9.0"
bevy_trauma_shake = "0.5.0"
bevy-inspector-egui = { version = "0.31.0", optional = true }
egui_dock = { version = "0.16.0", optional = true }
transform-gizmo-egui = { version = "0.5", optional = true }
bevy_gltf_animation = "0.2.0"
rand = "0.9.1"
bevy_simple_subsecond_system = { version = "0.1.11", optional = true }
rand_chacha = "0.9.0"
bevy_mod_outline = "0.10.0"
bevy_tweening = "0.13.0"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[lints.clippy]
type-complexity = "allow"
too-many-arguments = "allow"
double-parens = "allow"

[lints.rust]
unused_parens = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.web-release]
inherits = "release"
opt-level = "s"
codegen-units = 1
